# lox

./: .clang-format  CMakeLists.txt  CMakePresets.json
src/: context.hpp  keywords.cpp  keywords.hpp  log.cpp  log.hpp  lox.cpp  lox.hpp  main.cpp  scanner.cpp  scanner.hpp  token.hpp
